Fixed alignment

--- a/client/src/pages/home/Home.scss
+++ b/client/src/pages/home/Home.scss
@@ -13,7 +13,7 @@
     .Home__Container__Content {
       display: flex;
       flex-direction: column;
-      gap: 25px;
+      gap: 20px;
 
       h1 {
         font-size: 42px;
@@ -43,6 +43,7 @@
         border: none;
         border-radius: 50px;
         text-transform: uppercase;
+        margin-top: 10px;
 
         &:hover {
           background-color: #583ab8;
